UX-1010 fix alignment of user selector pills

--- a/_scss/components/custom-selector.scss
+++ b/_scss/components/custom-selector.scss
@@ -20,7 +20,7 @@
         color: #28a68a;
         border: 1px solid #aaaaaa;
         padding: 3px 20px 3px 5px;
-        margin: 3px 0;
+        margin: 1px 0 3px 0 !important;
         line-height: 1.5em;
         position: relative;
         cursor: default;
